# Edrak

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: Linux.yml  cmake.yml  conan.yml
Edrak/include/Edrak/: Core.hpp  Edrak.hpp
Edrak/include/Edrak/3D/: ICP.hpp  Landmark.hpp  Utils.hpp
Edrak/include/Edrak/Benchamrk/: Timer.hpp
Edrak/include/Edrak/Common/: Logger.hpp
Edrak/include/Edrak/Evaluation/: Trajectory.hpp
Edrak/include/Edrak/Exceptions/: Exceptions.hpp
Edrak/include/Edrak/IO/: IO.hpp  PointCloud.hpp  Reader.hpp  Trajectory.hpp  Utils.hpp  tinyply.h
Edrak/include/Edrak/Images/: Calibration.hpp  Features.hpp  Frame.hpp  Images.hpp  RGBD.hpp  TemplateMatching.hpp  Triangulation.hpp
Edrak/include/Edrak/SLAM/: Backend.hpp  Frontend.hpp  Map.hpp  Settings.hpp  Viewer.hpp  VisualSLAM.hpp
Edrak/include/Edrak/Types/: Transformation.hpp  Types.hpp
Edrak/include/Edrak/VO/2D/: PoseEstmation.hpp
Edrak/include/Edrak/Visual/: 3D.hpp  GUI.hpp  Viewer.hpp
Edrak/src/: main.cpp
Edrak/src/3D/: ICP.cpp  Landmark.cpp
Edrak/src/Evaluation/: Trajectory.cpp
Edrak/src/IO/: PointCloud.cpp  Trajectory.cpp
Edrak/src/Images/: Calibration.cpp  Features.cpp  Frame.cpp  RGBD.cpp  TemplateMatching.cpp
Edrak/src/SLAM/: Backend.cpp  Frontend.cpp  Map.cpp  Settings.cpp  Viewer.cpp  ceres_problems.hpp  g2o_types.h
Edrak/src/VO/2D/: PoseEstmation.cpp
Edrak/src/Visual/: 3D.cpp  Viewer.cpp
Examples/: CMakeLists.txt  KITTI_VO.cpp
Examples/BA/: BA_main.cpp  CMakeLists.txt  SnavelyReprojectionError.h  common.cpp  common.hpp  random.h  rotation.h
Examples/VO/: test_PoseEstmation.cpp
docs/: Doxyfile
include/Edrak/IO/: MonoReader.hpp
notes/: ImagesMatching.md  Untitled Diagram.drawio
src/Edrak/IO/: MonoReader.cpp  Utils.cpp
tests/: MyTests.cpp
tests/3D/: Test_ICP.cpp  Test_Landmark.cpp  Test_utils.cpp
tests/IO/: test_trajectory.cpp
tests/Images/: Test_Calibration.cpp  Test_Features.cpp  Test_Frame.cpp  Test_RGBD.cpp  Test_TemplateMatching.cpp
tests/SLAM/: Test_Frontend.cpp
tests/Types/: Test_Transformation.cpp
tests/VO/: test_PoseEstmation.cpp
tests/Visual/: Test_GUI.cpp  test_3D.cpp
tests/data/Images/RGBD/: pose.txt
tests/data/Settings/: settings.yaml
tools/: CMakeLists.txt  train_DBow.cpp
